fix alignment and add games

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ nav ul a {
   text-decoration: none;
 }
 .banner_full {
- border-bottom: solid 30px #bc6d02;
+  border-bottom: solid 30px #bc6d02;
 }
 .hero {
   background: url('/../img/ollie_lake.jpg');
@@ -84,7 +84,6 @@ nav ul a {
 }
 /** Main Section */
 .wrapper {
- 
   margin: 0;
 }
 .inner {
@@ -135,9 +134,9 @@ nav ul a {
   border-radius: 30px;
   display: flex;
   flex-direction: column;
-  margin: 05%;
-
+  margin: 20px auto;
   max-width: 80%;
+  padding-bottom: 20px;
 }
 .image-fit {
   border-radius: 6px;
@@ -155,7 +154,7 @@ nav ul a {
   margin: 0 auto;
   max-width: 80%;
   max-height: 80%;
-  padding-top: 10px;
+  padding-top: 20px;
   text-align: center;
 }
 .title-project {
